--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 					});
 				}
 				else{
-					state.innerHTML = `<a href="/login"><button>로그인해주세요</button></a>`;
+							state.innerHTML = `<a href="/login"><button>로그인해주세요</button></a><a href="/signup"><button>회원 가입</button></a>`;
 				}
 			});
 	</script>
